# qt_actions_test

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
